styles/createGamePage-styles.css
@import './colors.css';

@keyframes fadeUpSlow {
  from {
    opacity: 0;
    transform: translateY(50px);
  }
  to {
    opacity: 100;
    transform: translateY(0);
  }
}

#createGameLogo_id {
  object-fit: fill;
  max-width: 200px;
  margin-top: -30px;
}

#createGameText_id {
  color: var(--text-primary);
  font-size: 30px;
  font-weight: 300;
  margin-top: 50px;
  text-align: center;
  max-width: 350px;
}

#settingsWrapper_id {
  display: flex;
  flex-direction: column;
  margin-top: 40px;
  padding: 10px 30px 10px 30px;
  max-width: 320px;
  align-items: start;
}

.individualSettingDOM {
  display: flex;
  flex-direction: row;
  color: var(--text-secondary);
  font-size: 30px;
  margin-bottom: 40px;
}

.individualSettingDOM .settingName {
  width: 200px;
}

.selectorDOM {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.selectorDOM button {
  border: none;
  background-color: none;
  font-size: 30px;
  color: var(--text-primary);
}

.selectorDOM button:hover {
  cursor: pointer;
}

.selectorDOM div {
  color: var(--text-primary);
  font-size: 30px;
  margin-left: 10px;
  margin-right: 10px;
}

